--- a/WinAPIPong/WinAPIPong.vcxproj.filters
+++ b/WinAPIPong/WinAPIPong.vcxproj.filters
@@ -27,21 +27,9 @@
     <ClInclude Include="WinAPIPong.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Vect.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Ball.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinAPIPong.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Vect.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Ball.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -58,6 +46,9 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="C:\Users\zeron\Downloads\pong.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="bitmap1.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
